Revision history for {{$dist->name}}

{{$NEXT}}

2.00102   2010-01-15 21:50:20 CST6CDT
       - Better performance for some cases in NumifyGet
       - _determine_driver is better than _ensure_connected ( Random )

2.00101   2010-01-15 02:14:55 CST6CDT
       - fix bug in Random where if a user calls random and schema isn't
         connected yet we get false storage type (thanks jnap)
       - fix NumifyGet for nullable and autoinc columns

2.00100   2010-01-13 23:37:34 CST6CDT
       - fix 'me' in RS::Union
       - change order in RS::Union so Unioning RS is first instead of last
       - add Row::NumifyGet
       - add docs to RS::Union to clarify some of the awesomeness that can be had
       - fixed union because it didn't actually work before (!!!)

2.00000   2009-12-30 13:02:23 CST6CDT
       - No new changes since dev release

2.00000_2 2009-12-29 18:45:15 CST6CDT
       - note added to SubClass disambiguating it from
         DBIx::Class::DynamicSubclass (thanks jnap)
       - random_order_by is now private (_random_order_by)
       - Depend on String::CamelCase now that it's fixed

2.00000_1 2009-12-28 11:40:43 CST6CDT
       - No longer depend on SQLT
       - Switch to more user friendly versioning
       - Allow multiple random rows from Random
       - Add the most excellent Helper::ResultSet::Union
       - namespace helpers

1.093501  2009-12-16 16:32:55 CST6CDT
       - Fix deps list

1.093500  2009-12-16 16:12:00 CST6CDT
       - Add IgnoreWantarray helper
       - Pull column def information from foreign tables
         for JoinTable helper, see pod in helper for details

0.093270 Mon Nov 23 10:45 2009
       - Add Random helper
       - Clean up as_virtual_view with recommendation from ijw and ribasushi

0.093140 Tue Nov 10 09:32 2009
       - Fix DBIC version dep
       - Get rid of some warnings from the test suite

0.093071 Tue Nov 03 20:53 2009
       - Fix package of VirtualView
       - Add test so that won't happen again
