@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+       - Autopopulate is_numeric correcly with NumifyGet
+       - Fix mssql Random to use RAND() (pldoh, #RT53885)
 
 2.00102   2010-01-15 21:50:20 CST6CDT
        - Better performance for some cases in NumifyGet
